--- a/Hackday_9th_Oct.Rmd
+++ b/Hackday_9th_Oct.Rmd
@@ -10,6 +10,7 @@ library(data.table)
 library(ggplot2)
 library(patchwork)
 library(lubridate)
+setwd("~/Documents/Documents - Ruby's MacBook Air/RAC Work/MotoringIndex/RubyMotoringIndex")
 ```
 
 #Read files
