--- a/KSI.Rmd
+++ b/KSI.Rmd
@@ -17,26 +17,37 @@ setwd("~/Documents/Documents - Ruby's MacBook Air/RAC Work/MotoringIndex/RubyMot
 ```{r}
 DftStats1 <- fread("dft-road-casualty-statistics-casualty-1979-latest-published-year.csv")
 AdjustedStats <- fread("dft-road-casualty-statistics-casualty-adjustment-lookup_2004-latest-published-year.csv")
-TotalMilesDriven <- fread("MilesByVehicleType.csv")
+TotalMilesDriven <- fread("~/Documents/Documents - Ruby's MacBook Air/RAC Work/MotoringIndex/tra0101-miles-by-vehicle-type.csv")
 ```
+```{r}
+DftStats2 <- merge(dfst
+                   )
+```
+
+
+```{r}
+DftStats1 <- DftStats1[, c("sex_of_casualty", "age_of_casualty", "age_band_of_casualty", "pedestrian_location", "pedestrian_movement", "pedestrian_road_maintenance_worker", "casualty_home_area_type", "casualty_distance_banding", "casualty_imd_decile", "casualty_class", "car_passenger", "bus_or_coach_passenger", "casualty_type", "lsoa_of_casualty", "accident_reference", "vehicle_reference") := NULL]
+AdjustedStats <- AdjustedStats[, c("accident_reference", "vehicle_reference", "casualty_reference"):= NULL]
+```
+
 
 #Formatting
 ```{r}
-DftStats1 <- DftStats1[casualty_severity < 3,]
-DftStats1 <- DftStats1[, c("sex_of_casualty", "age_of_casualty", "age_band_of_casualty", "pedestrian_location", "pedestrian_movement", "pedestrian_road_maintenance_worker", "casualty_home_area_type", "casualty_distance_banding", "casualty_imd_decile", "casualty_class", "car_passenger", "bus_or_coach_passenger", "casualty_type", "lsoa_of_casualty", "accident_reference", "vehicle_reference") := NULL]
 DftStats2004 <- DftStats1[accident_year >= 2004,]
+DftStats2004 <- DftStats2004[casualty_severity < 3,]
+DftStats1[, accident_reference, accident_year]
 ```
 
 ```{r}
-AdjustedStats <- AdjustedStats[, c("accident_reference", "vehicle_reference", "casualty_reference"):= NULL]
-AdjustedStats <- merge(AdjustedStats, DftStats2004, by.x = "accident_index", by.y = "accident_index", all = TRUE)
+AdjustedStats <- merge(AdjustedStats, DftStats1, by = c("accident_index", ), all = TRUE)
 rm(DftStats2004)
 ```
+
 ```{r}
 CasualtybyYear <- DftStats1[,.N, keyby = c("accident_year", "casualty_severity")]
 xyz <- subset(CasualtybyYear, CasualtybyYear$casualty_severity == "1")
 abc <- subset(CasualtybyYear, CasualtybyYear$casualty_severity == "2")
-CasualtybyYear <- merge(xyz, abc, by.x = "accident_year", by.y = "accident_year", all = TRUE)
+CasualtybyYear <- merge(xyz, abc, by = "accident_year", all = TRUE)
 setnames(CasualtybyYear, c("N.x", "N.y"), c("Fatalities", "Serious Injuries"))
 CasualtybyYear[, c("casualty_severity.x", "casualty_severity.y") := NULL]
 rm(xyz)
@@ -85,8 +96,9 @@ ggplot() +
   geom_line(data = TotalMilesDriven, aes(y = CasualtyRate, x= `Year ending [note 1]`, colour = "Casualty (Serious injury)", linetype = "Casualty (Serious injury)")) + 
   geom_line(data = TotalMilesDriven, aes(y = KSIRate, x= `Year ending [note 1]`, colour = "Fatality or casualty (killed or seriously injured)", linetype = "Fatality or casualty (killed or seriously injured)"))+
   theme_classic() + 
-  ggtitle("Fatalities and serious injuries per one billion motor vehicle miles") + ylab("Rate") + 
-  scale_color_manual("Casuality Severity Levels", values = CasualtyColours) + xlab("End of year") + scale_linetype_manual("Casuality Severity Levels", values = CasualtyLines)
+  ggtitle("Fatalities and serious injuries per one billion motor vehicle miles travelled") + ylab("Rate") + 
+  scale_color_manual("Casuality Severity Levels", values = CasualtyColours) + xlab("End of year") + scale_linetype_manual("Casuality Severity Levels", values = CasualtyLines)+
+  theme(legend.position = "bottom", legend.title.position = "top", legend.text.position = "bottom")
 
 ```
 ggsave("KSIPlot.pdf")
